--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -24,3 +24,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 ##############################################################################
 #duree de vie du token en min
 custom.user.password-token-expiration=1440
+
+springdoc.api-docs.path=/api-docs
