--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,6 @@
 
     <properties>
         <java.version>12</java.version>
-        <springfox.version>2.7.0</springfox.version>
         <modelmapper.version>2.3.2</modelmapper.version>
         <jsonwebtoken.version>0.9.1</jsonwebtoken.version>
     </properties>
@@ -68,23 +67,13 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>${springfox.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>${springfox.version}</version>
         </dependency>
 
     </dependencies>
