--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/sb_jwt_secu?useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=sb_jwt_secu
-spring.datasource.password=Java1234..
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.security.oauth2.client.registration.google.client-id=294418469399-9f27isdr8m6hfj68crmq7ll6b56r9au6.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
 
 ## App Properties
 app.jwtSecret= JWTSuperSecretKey
